infrastructure/kustomize/kafka/overlays/qa/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-qa
  labels:
    name: kafka-qa
