infrastructure/kustomize/kafka/overlays/qa/kafka-ui-security-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
spec:
  template:
    spec:
      containers:
      - name: kafka-ui
