infrastructure/kustomize/kafka/overlays/qa/schema-registry-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
spec:
  template:
    spec:
      # nodeSelector:
      #   cloud.google.com/gke-nodepool: np-cs-qa-enterprise-db-kafka-asse1-01
      #   workload: kafka
      tolerations:
      - effect: NoSchedule
        key: dedicated
        operator: Equal
        value: kafka
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - kafka
            topologyKey: kubernetes.io/hostname
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - kafka-ui
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - name: schema-registry
