infrastructure/kustomize/kafka/overlays/qa/kafka-internal-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-internal-0
spec:
  ports:
    - port: 9094
      targetPort: 9094
      protocol: TCP
      name: external
    - port: 9093
      targetPort: 9093
      protocol: TCP
      name: controller
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-internal-1
spec:
  ports:
    - port: 9094
      targetPort: 9094
      protocol: TCP
      name: external
    - port: 9093
      targetPort: 9093
      protocol: TCP
      name: controller
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-internal-2
spec:
  ports:
    - port: 9094
      targetPort: 9094
      protocol: TCP
      name: external
    - port: 9093
      targetPort: 9093
      protocol: TCP
      name: controller
