infrastructure/kustomize/kafka/overlays/qa/kafka-ui-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
spec:
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
