infrastructure/kustomize/kafka/overlays/qa/kafka-ui-service-port-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
